Fixed the side bar a bit, but still allowed clickthrough to the content behind it. Probably a property I'm missing in the react-burger-menu docs

--- a/src/mobile/Header.css
+++ b/src/mobile/Header.css
@@ -14,11 +14,6 @@
     border-bottom: 2px solid #EF22F550;
 }
 
-.nav_button {
-    position: absolute;
-    left: 10px;
-}
-
 .headerTitle {
     display: flex;
     width: auto;
@@ -32,8 +27,8 @@
     position: fixed;
     width: 24px;
     height: 20px;
-    left: 24px;
-    top: 20px;
+    left: 10px;
+    top: 10px;
   }
   
   /* Color/shape of burger icon bars */
@@ -62,7 +57,7 @@
   Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
   */
   .bm-menu-wrap {
-    position: absolute;
+    position: fixed;
     height: 100%;
   }
   
